--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,8 +1,8 @@
 $shadow-color: #0000001a;
 $body-background: #9dabb8;
 
-$desktop-header-height: 104px;
-$desktop-footer-height: 104px;
+$desktop-header-height: 63.11px;
+$desktop-footer-height: 69.77px;
 
-$mobile-header-height: 64px;
-$mobile-footer-height: 124px;
+$mobile-header-height: 63.11px;
+$mobile-footer-height: 143.09px;
